# LanBridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: macos-unsigned-distribution.md
docs/product/: PRD.md
redesign/: design.md
scripts/: bump-patch-version.mjs  lint-names.mjs  package-platform.mjs  preflight-package.mjs  verify-release-tag.mjs  verify-version.mjs
src/: App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/patches/tao-0.16.11/: Cargo.toml
src-tauri/patches/tao-0.16.11/examples/: README.md
src-tauri/patches/tao-0.16.11/src/platform_impl/macos/: app_delegate.rs  window.rs
src-tauri/src/: app_settings.rs  app_state.rs  commands.rs  diagnostics.rs  lib.rs  main.rs  update.rs
src-tauri/src/commands/: mod.rs  pairing.rs
src-tauri/src/core/: conflict.rs  executor.rs  mod.rs  model.rs  path_safety.rs  planner.rs  scanner.rs  transient.rs
src-tauri/src/history/: store.rs
src-tauri/src/pairing/: handshake.rs  identity.rs  mod.rs
src-tauri/src/platform/: mod.rs  traits.rs
src-tauri/src/platform/macos/: app_dirs.rs  fs_rules.rs  mod.rs  tray.rs  watcher.rs
src-tauri/src/platform/windows/: app_dirs.rs  fs_rules.rs  mod.rs  tray.rs  watcher.rs
src-tauri/src/state/: db.rs  migrations.rs  mod.rs  repository.rs
src-tauri/src/transport/: connection.rs  discovery.rs  mod.rs  protocol.rs  server.rs  transfer.rs
src-tauri/tests/: e2e_full_flow.rs  executor.rs  macos_executor.rs  macos_fs_rules.rs  macos_two_peer_sync.rs  pairing_transfer.rs  scanner_planner_history.rs  state_repository.rs  two_peer_sync.rs  windows_executor.rs  windows_fs_rules.rs  windows_two_peer_sync.rs
tests/: setup.ts
(+72 files in other folders)
