[package]
name = "lanbridge"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "icon-png", "shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
local-ip-address = "0.6"
trash = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol", "system-tray"]
custom-protocol = ["tauri/custom-protocol"]
system-tray = ["tauri/system-tray"]

[patch.crates-io]
tao = { path = "patches/tao-0.16.11" }
